; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_ReleasePredicateLocksLocal.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_ReleasePredicateLocksLocal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidSerializableXact = common dso_local global i32 0, align 4
@MySerializableXact = common dso_local global i32 0, align 4
@MyXactDidWrite = common dso_local global i32 0, align 4
@LocalPredicateLockHash = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ReleasePredicateLocksLocal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ReleasePredicateLocksLocal() #0 {
  %1 = load i32, i32* @InvalidSerializableXact, align 4
  store i32 %1, i32* @MySerializableXact, align 4
  store i32 0, i32* @MyXactDidWrite, align 4
  %2 = load i32*, i32** @LocalPredicateLockHash, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i32*, i32** @LocalPredicateLockHash, align 8
  %6 = call i32 @hash_destroy(i32* %5)
  store i32* null, i32** @LocalPredicateLockHash, align 8
  br label %7

7:                                                ; preds = %4, %0
  ret void
}

declare dso_local i32 @hash_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
